@startuml
'https://plantuml.com/class-diagram

class App{
    start()
    main()
}


class MainWindowController{
    ObservableList: Item


    helpButtonClicked()
    searchItemButtonClicked()
    addItemButtonClicked()
    editNameButtonClicked()
    editSerialNumButtonClicked()
    editValueButtonClicked()
    removeItemButtonClicked()
    sortByValueButtonClicked()
    sortBySerialNumberButtonClicked()
    sortByNameButtonClicked()
    SaveFileButtonClicked()
    loadFileButtonClicked()

    addItem(String, String, Double)
    removeItem(Item)
    editName(Item, str)
    editSerialNum(Item, str)
    editValue(Item, str)
    sortByValue()
    sortBySerialNumber()
    sortByName()
    saveInventory(File)
    loadInventory(File)
    displayItems()
    checkValidName(str)
    checkValidSerialNum(str)
    checkValidValue(str)

    alerts()
}

class FileManager{
    SaveAsTxt()
    LoadTxt()
    SaveAsHtml()
    LoadHtml()
    SaveAsJson()
    LoadAsJson()
}


class Item{
    - String: name
    - String: serial number
    - Double: value

    + Constructors()
    + Getters()
    + Setters()
}

openjfx.org.Application <|-- App
App -- MainWindowController
MainWindowController *-- FileManager
MainWindowController *-- Item


@enduml